Use jekyll-redirect-from for old blog urls

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ source: ./site
 destination: ./public
 exclude: ['*.scss']
 include: ['.htaccess']
+gems:
+  - jekyll-redirect-from
 defaults:
   -
     scope:
