--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,11 @@ source: ./site
 destination: ./public
 exclude: ['*.scss']
 include: ['.htaccess', '.nojekyll']
+name: Aron Griffis
+title: Aron Griffis
+email: aron@arongriffis.com
+url: http://arongriffis.com
+rss_description: Aron's notes and howtos
 gems:
   - jekyll-redirect-from
 defaults:
