--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,8 @@ title: Aron Griffis
 email: aron@arongriffis.com
 url: http://arongriffis.com
 rss_description: Aron's Blog
-gems:
-  - jekyll-redirect-from
-  - jekyll-sitemap
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
     values:
       layout: default
