switch from compass to jekyll built-in sass.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 source: ./site
 destination: ./public
-exclude: ['*.scss']
 include: ['.htaccess', '.nojekyll']
 name: Aron Griffis
 title: Aron Griffis
@@ -9,6 +8,9 @@ url: https://arongriffis.com
 rss_description: Aron's Blog
 kramdown:
   smart_quotes: ["apos", "apos", "quot", "quot"]
+sass:
+  load_paths:
+    - /home/vagrant/src/node_modules/susy/sass
 defaults:
   - scope:
       path: ""
