add susy to package.json, and stop using shrinkwrap

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "files": [],
   "dependencies": {
-    "browser-sync": "latest"
+    "browser-sync": "latest",
+    "susy": "~2"
   }
 }
