--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,11 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
-end_of_line = lf
-insert_final_newline = true
 indent_style = space
 indent_size = 4
+tab_width = 8
+end_of_line = lf
+insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.{json,yaml,yml}]
