omit atom feed in favor of rss to reduce confusion

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 source: ./site
 destination: ./public
 include: ['.htaccess', '.nojekyll']
+exclude: ['atom.xml']
 name: Aron Griffis
 title: Aron Griffis
 email: aron@arongriffis.com
