--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --host 0.0.0.0",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "astro": "^2.0.2"
+  "devDependencies": {
+    "@astrojs/image": "^0.15.0",
+    "astro": "^2.0.9",
+    "case-anything": "^2.1.10",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.4.21",
+    "postcss-constants": "^0.2.0",
+    "postcss-nested": "^6.0.0"
   }
 }
