--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/image": "^0.15.0",
-    "astro": "^2.0.9",
     "case-anything": "^2.1.10",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.21",
     "postcss-constants": "^0.2.0",
-    "postcss-nested": "^6.0.0"
+    "postcss-nested": "^6.0.0",
+    "rollup": "^3.15.0"
+  },
+  "dependencies": {
+    "@astrojs/image": "^0.15.0",
+    "@astrojs/mdx": "^0.16.2",
+    "@astrojs/react": "^2.0.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.0.9",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
