--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@linaria/vite": "^4.2.7",
     "case-anything": "^2.1.10",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.21",
     "postcss-constants": "^0.2.0",
     "postcss-nested": "^6.0.0",
-    "rollup": "^3.15.0"
+    "rollup": "^3.17.1",
+    "vite": "^4.1.2"
   },
   "dependencies": {
     "@astrojs/image": "^0.15.0",
     "@astrojs/mdx": "^0.16.2",
     "@astrojs/react": "^2.0.2",
+    "@linaria/babel-preset": "^4.4.1",
+    "@linaria/core": "^4.2.6",
+    "@linaria/react": "^4.3.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.0.9",
