--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.4.21",
     "postcss-constants": "^0.2.0",
     "postcss-nested": "^6.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1",
     "rollup": "^3.17.1",
     "vite": "^4.1.2"
   },
@@ -29,10 +31,10 @@
     "@linaria/babel-preset": "^4.4.1",
     "@linaria/core": "^4.2.6",
     "@linaria/react": "^4.3.4",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "astro": "^2.0.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
