--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.0",
-    "@linaria/vite": "^4.2.7",
-    "case-anything": "^2.1.10",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
+    "@linaria/vite": "^5.0.3",
+    "case-anything": "^2.1.13",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.31",
     "postcss-constants": "^0.2.0",
-    "postcss-nested": "^6.0.0",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
-    "rollup": "^3.17.1",
-    "vite": "^4.1.2"
+    "rollup": "^4.2.0",
+    "sharp": "^0.32.6",
+    "vite": "^4.5.0"
   },
   "dependencies": {
-    "@astrojs/image": "^0.15.0",
-    "@astrojs/mdx": "^0.16.2",
-    "@astrojs/react": "^2.0.2",
-    "@linaria/babel-preset": "^4.4.1",
-    "@linaria/core": "^4.2.6",
-    "@linaria/react": "^4.3.4",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "astro": "^2.0.9",
+    "@astrojs/mdx": "^1.1.3",
+    "@astrojs/react": "^3.0.4",
+    "@linaria/babel-preset": "^5.0.3",
+    "@linaria/core": "^5.0.2",
+    "@linaria/react": "^5.0.3",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "astro": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
