--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "astro": "^3.4.1",
+    "rambdax": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
