--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.2",
-    "@linaria/vite": "^5.0.3",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "case-anything": "^2.1.13",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.31",
@@ -22,17 +20,11 @@
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
     "rollup": "^4.2.0",
-    "sharp": "^0.32.6",
-    "vite": "^4.5.0"
+    "sharp": "^0.32.6"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/react": "^3.0.4",
-    "@linaria/babel-preset": "^5.0.3",
-    "@linaria/core": "^5.0.2",
-    "@linaria/react": "^5.0.3",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
     "astro": "^3.4.1",
     "rambdax": "^10.0.0",
     "react": "^18.2.0",
