--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "sharp": "^0.32.6"
   },
   "dependencies": {
+    "@ariakit/react": "^0.3.5",
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/react": "^3.0.4",
     "astro": "^3.4.1",
+    "iter-tools-es": "^7.5.3",
     "rambdax": "^10.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remeda": "^1.29.0",
+    "sanctuary": "^3.1.0",
+    "sanctuary-def": "^0.22.0",
+    "sanctuary-type-classes": "^13.0.0",
+    "sanctuary-type-identifiers": "^4.0.0"
   }
 }
