--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ariakit/react": "^0.3.5",
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/react": "^3.0.4",
+    "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.1",
     "iter-tools-es": "^7.5.3",
     "rambdax": "^10.0.0",
