--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/react": "^3.0.4",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.3",
     "astro": "^3.4.1",
     "iter-tools-es": "^7.5.3",
     "rambdax": "^10.0.0",
