--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,18 +2,25 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "src/assets/images"
-public_folder: "src/assets/images"
+# repo location for images
+media_folder: "src/images"
+
+# how to import images into content
+public_folder: "src/images"
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "src/content/blog" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    fields: # The fields for each document, usually in frontmatter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
+  - name: "posts"
+    label: "Posts"
+    folder: "src/content/posts"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
+      - { label: "Draft", name: "draft", widget: "boolean" }
+      - { label: "Index", name: "index", widget: "boolean" }
+      - { label: "Created", name: "created", widget: "datetime" }
+      - { label: "Updated", name: "updated", widget: "datetime" }
+      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Tags", name: "tags", widget: "list" }
+      - { label: "Excerpt", name: "excerpt", widget: "markdown" }
       - { label: "Body", name: "body", widget: "markdown" }
