--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -37,11 +37,11 @@ collections:
         pattern: true
     fields:
       - {label: 'Title', name: 'title', widget: 'string'}
-      - {label: 'Draft', name: 'draft', widget: 'boolean'}
-      - {label: 'Index', name: 'index', widget: 'boolean'}
-      - {label: 'Created', name: 'created', widget: 'datetime'}
-      - {label: 'Updated', name: 'updated', widget: 'datetime'}
-      - {label: 'Image', name: 'image', widget: 'image'}
-      - {label: 'Tags', name: 'tags', widget: 'list'}
-      - {label: 'Excerpt', name: 'excerpt', widget: 'markdown'}
-      - {label: 'MDX', name: 'body', widget: 'code', default_language: 'mdx', output_code_only: true}
+      - {label: 'Draft', name: 'draft', widget: 'boolean', required: false}
+      - {label: 'Index', name: 'index', widget: 'boolean', required: false}
+      - {label: 'Created', name: 'created', widget: 'datetime', date_format: 'YYYY-MM-DD', default: '', required: false}
+      - {label: 'Updated', name: 'updated', widget: 'datetime', date_format: 'YYYY-MM-DD', default: '', required: false}
+      - {label: 'Image', name: 'image', widget: 'image', required: false}
+      - {label: 'Tags', name: 'tags', widget: 'list', required: false}
+      - {label: 'Excerpt', name: 'excerpt', widget: 'markdown', minimal: true, required: false}
+      - {label: 'Body', name: 'body', widget: 'markdown'}
